user jdbc template

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
 <head lang="en">
-    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" charset="utf-8">
     <link rel="icon" type="image/png" href="resources/img/favicon.jpeg"/>
     <!-- inject:css -->
     <link rel="stylesheet" href="resources/vendor/css/lib.min.css">
