--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,10 +2,10 @@
 <html ng-app="myApp">
 <head lang="en">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" charset="utf-8">
-    <link rel="icon" type="image/png" href="resources/img/favicon.jpeg"/>
+    <link rel="icon" type="image/png" href="resources/dist/img/favicon.jpeg"/>
     <!-- inject:css -->
     <link rel="stylesheet" href="resources/vendor/css/lib.min.css">
-    <link rel="stylesheet" href="resources/css/main.css">
+    <link rel="stylesheet" href="resources/dist/css/app.min.css">
     <!-- endinject -->
     <title></title>
 </head>
@@ -20,17 +20,8 @@
 </div>
 
 <!-- inject:js -->
-
 <script src="resources/vendor/js/lib.min.js"></script>
-
-<script src="resources/js/app.js"></script>
-
-<script src="resources/js/controllers.js"></script>
-
-<script src="resources/js/directives.js"></script>
-
-<script src="resources/js/services.js"></script>
-
+<script src="resources/dist/js/app.min.js"></script>
 <!-- endinject -->
 
 </body>
